syntax = "proto3";

package hello;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message GoodbyeRequest {
  string name = 1;
}

message GoodbyeResponse {
  string message = 1;
}
